Excel to Oracle has date problem

--- a/Excel-CSV.ipynb
+++ b/Excel-CSV.ipynb
@@ -32,9 +32,9 @@
             "cell_type": "code",
             "execution_count": 76,
             "source": [
-                "# Create data frame from CSV\n",
+                "# Create DataFrame from CSV\n",
                 "df_csv = pd.read_csv(\"testtable.csv\")\n",
-                "# View your new data frame\n",
+                "# View your new DataFrame\n",
                 "df_csv"
             ],
             "outputs": [
@@ -147,9 +147,9 @@
             "cell_type": "code",
             "execution_count": 90,
             "source": [
-                "# Create data frame from Excel\n",
+                "# Create DataFrame from Excel\n",
                 "df_excel = pd.read_excel(\"testtable.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
-                "# View your new data frame\n",
+                "# View your new DataFrame\n",
                 "df_excel"
             ],
             "outputs": [
@@ -262,7 +262,7 @@
             "cell_type": "code",
             "execution_count": 78,
             "source": [
-                "# List data frame columns\n",
+                "# List DataFrame columns\n",
                 "df_csv.columns"
             ],
             "outputs": [
@@ -290,7 +290,7 @@
             "cell_type": "code",
             "execution_count": 79,
             "source": [
-                "# List data frame columns\n",
+                "# List DataFrame columns\n",
                 "df_excel.columns"
             ],
             "outputs": [
@@ -318,7 +318,7 @@
             "cell_type": "code",
             "execution_count": 80,
             "source": [
-                "# Send CSV data frame to Excel file\n",
+                "# Send CSV DataFrame to Excel file\n",
                 "df_csv.to_excel('testtable_csv_export.xlsx', index=False)"
             ],
             "outputs": [],
@@ -335,7 +335,7 @@
             "cell_type": "code",
             "execution_count": 81,
             "source": [
-                "# Send Excel data frame to CSV file\n",
+                "# Send Excel DataFrame to CSV file\n",
                 "df_excel.to_csv('testtable_excel_export.csv', index=False)"
             ],
             "outputs": [],
@@ -355,7 +355,7 @@
                 "# Filter the CSV data\n",
                 "date_query = df_csv['TEST_DATETIME'].str.contains(\"2021-08-18\")\n",
                 "df_filtered_csv = df_csv.query('@date_query')\n",
-                "# Send part part of the CSV filtered data frame to Excel file\n",
+                "# Send part part of the CSV filtered DataFrame to Excel file\n",
                 "df_filtered_csv.to_excel('testtable_transformed_csv_export.xlsx', index=False, columns=['TEST_DATETIME', 'TEST_NUMBER'])"
             ],
             "outputs": [],
@@ -375,7 +375,7 @@
                 "# Filter the Excel data\n",
                 "date_query = df_excel['TEST_DATETIME'].str.contains(\"2021-08-18\")\n",
                 "df_filtered_excel = df_excel.query('@date_query')\n",
-                "# Send part part of the Excel filtered data frame to CSV file\n",
+                "# Send part part of the Excel filtered DataFrame to CSV file\n",
                 "df_filtered_excel.to_csv('testtable_transformed_excel_export.csv', index=False, columns=['TEST_DATETIME', 'TEST_NUMBER'])"
             ],
             "outputs": [],
