--- a/Excel-Oracle.ipynb
+++ b/Excel-Oracle.ipynb
@@ -15,12 +15,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 75,
+            "execution_count": 2,
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd\n",
                 "# Library to talk with Oracle, requires Python cx_Oracle module and the Oracle Instant Client to be installed on host\n",
-                "from sqlalchemy import create_engine"
+                "from sqlalchemy import create_engine\n",
+                "# Field mapping uses SQLAlchemy\n",
+                "import sqlalchemy"
             ],
             "outputs": [],
             "metadata": {}
@@ -34,11 +36,11 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 90,
+            "execution_count": 3,
             "source": [
-                "# Create data frame from Excel\n",
+                "# Create DataFrame from Excel\n",
                 "df_excel = pd.read_excel(\"testtable.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
-                "# View your new data frame\n",
+                "# View your new DataFrame\n",
                 "df_excel"
             ],
             "outputs": [
@@ -135,7 +137,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 90
+                    "execution_count": 3
                 }
             ],
             "metadata": {}
@@ -149,9 +151,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 79,
+            "execution_count": 4,
             "source": [
-                "# List data frame columns\n",
+                "# List DataFrame columns\n",
                 "df_excel.columns"
             ],
             "outputs": [
@@ -163,9 +165,45 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 79
+                    "execution_count": 4
                 }
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Excel Columns Rename"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Rename fields\n",
+                "df_excel.rename(columns = {'TEST_DATETIME':'test_datetime', }, inplace = True)\n",
+                "df_excel.rename(columns = {'TEST_NUMBER':'test_number', }, inplace = True)\n",
+                "df_excel.rename(columns = {'TEST_TEXT':'test_text', }, inplace = True)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# View Excel Field Types"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# List fields and their types\n",
+                "df_excel.convert_dtypes().dtypes"
+            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -185,8 +223,10 @@
                 "db_inst = create_engine(db_connection)\n",
                 "# Read existing Oracle table\n",
                 "oracle_table = \"testtable\"\n",
-                "oracle_query = \"SELECT * FROM '%s'\" % (str(oracle_table))\n",
-                "df_oracle = pd.read_sql_query(oracle_query, con=db_connection)"
+                "oracle_query = \"SELECT * FROM %s\" % (str(oracle_table))\n",
+                "df_oracle = pd.read_sql_query(oracle_query, con=db_inst)\n",
+                "# View your new DataFrame\n",
+                "df_oracle"
             ],
             "outputs": [],
             "metadata": {}
@@ -202,28 +242,14 @@
             "cell_type": "code",
             "execution_count": 81,
             "source": [
-                "# Send Excel data frame to Oracle\n",
-                "df_excel.to_csv('testtable_excel_export.csv', index=False)"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "# Write Excel transform to CSV"
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 91,
-            "source": [
-                "# Filter the Excel data\n",
-                "date_query = df_excel['TEST_DATETIME'].str.contains(\"2021-08-18\")\n",
-                "df_filtered_excel = df_excel.query('@date_query')\n",
-                "# Send part part of the Excel filtered data frame to CSV file\n",
-                "df_filtered_excel.to_csv('testtable_transformed_excel_export.csv', index=False, columns=['TEST_DATETIME', 'TEST_NUMBER'])"
+                "# Need to fix date time format below\n",
+                "\n",
+                "# Send Excel DataFrame to Oracle\n",
+                "df_excel_oracle_mapfields = dict({'test_datetime': sqlalchemy.DateTime(), 'test_number': sqlalchemy.types.INTEGER(), 'test_text': sqlalchemy.types.VARCHAR(length=50)})\n",
+                "df_excel.to_sql(oracle_table, db_inst, if_exists='append', index=False, dtype=df_excel_oracle_mapfields)\n",
+                "\n",
+                "# R example\n",
+                "#my_insert <- sprintf(\"INSERT INTO testtable (test_datetime, test_number, test_text) VALUES (TO_DATE('%s', 'YYYY/MM/DD HH24:MI:SS'), '%d', '%s')\", now_is, db_numfield, db_textfield)"
             ],
             "outputs": [],
             "metadata": {}
@@ -233,7 +259,7 @@
         "orig_nbformat": 4,
         "language_info": {
             "name": "python",
-            "version": "3.8.0",
+            "version": "3.8.2",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -245,10 +271,10 @@
         },
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3.8.0 64-bit"
+            "display_name": "Python 3.8.2 64-bit"
         },
         "interpreter": {
-            "hash": "082e9a3bcad0a290d0001e938aa60b99250c6c2ef33a923c00b70f9826caf4b7"
+            "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
         }
     },
     "nbformat": 4,
