Excel to Oracle Notebook completed

--- a/Excel-Oracle.ipynb
+++ b/Excel-Oracle.ipynb
@@ -4,12 +4,12 @@
             "cell_type": "markdown",
             "source": [
                 "# Setup in VS Code\n",
-                "### First set your Python interpreter in (Cmd Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next line\n",
-                "### Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
-                "### Next start a new Jupyter notebook (Cmd Shift P): \"Jupyter: Create New Blank Notebook\"\n",
-                "### Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
-                "### Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
-                "### Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
+                "- ### First set your Python interpreter (Cmd/Ctl Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next \"pip3\" line\n",
+                "- ### Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
+                "- ### Next start a new Jupyter notebook (Cmd/Ctl Shift P): \"Jupyter: Create New Blank Notebook\"\n",
+                "- ### Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
+                "- ### Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
+                "- ### Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
             ],
             "metadata": {}
         },
@@ -181,7 +181,7 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
-                "# Rename fields\n",
+                "# Rename fields to match database (if needed)\n",
                 "df_excel.rename(columns = {'TEST_DATETIME':'test_datetime', }, inplace = True)\n",
                 "df_excel.rename(columns = {'TEST_NUMBER':'test_number', }, inplace = True)\n",
                 "df_excel.rename(columns = {'TEST_TEXT':'test_text', }, inplace = True)"
@@ -192,7 +192,24 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# View Excel Field Types"
+                "# Convert Date/Time Field from String"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# String to Date/Time\n",
+                "df_excel['test_datetime'] = pd.to_datetime(df_excel['test_datetime'])"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Excel Field Types"
             ],
             "metadata": {}
         },
@@ -223,7 +240,9 @@
                 "db_inst = create_engine(db_connection)\n",
                 "# Read existing Oracle table\n",
                 "oracle_table = \"testtable\"\n",
+                "# Build query\n",
                 "oracle_query = \"SELECT * FROM %s\" % (str(oracle_table))\n",
+                "# Run query\n",
                 "df_oracle = pd.read_sql_query(oracle_query, con=db_inst)\n",
                 "# View your new DataFrame\n",
                 "df_oracle"
@@ -242,14 +261,46 @@
             "cell_type": "code",
             "execution_count": 81,
             "source": [
-                "# Need to fix date time format below\n",
-                "\n",
-                "# Send Excel DataFrame to Oracle\n",
+                "# Append Excel DataFrame to Oracle table\n",
+                "df_excel.to_sql(oracle_table, db_inst, if_exists='append', index=False)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Optional Way to Append Excel to Oracle if unable to map data types in DataFrame"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Build dictory for data mapping\n",
                 "df_excel_oracle_mapfields = dict({'test_datetime': sqlalchemy.DateTime(), 'test_number': sqlalchemy.types.INTEGER(), 'test_text': sqlalchemy.types.VARCHAR(length=50)})\n",
-                "df_excel.to_sql(oracle_table, db_inst, if_exists='append', index=False, dtype=df_excel_oracle_mapfields)\n",
-                "\n",
-                "# R example\n",
-                "#my_insert <- sprintf(\"INSERT INTO testtable (test_datetime, test_number, test_text) VALUES (TO_DATE('%s', 'YYYY/MM/DD HH24:MI:SS'), '%d', '%s')\", now_is, db_numfield, db_textfield)"
+                "# Append Excel DataFrame to Oracle table using data mapping\n",
+                "df_excel.to_sql(oracle_table, db_inst, if_exists='append', index=False, dtype=df_excel_oracle_mapfields)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Oracle Test for New Data"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Run query\n",
+                "df_oracle_updated = pd.read_sql_query(oracle_query, con=db_inst)\n",
+                "# View your updated DataFrame\n",
+                "df_oracle_updated"
             ],
             "outputs": [],
             "metadata": {}
