Oracle to Excel Notebook added

--- a/Excel-Oracle.ipynb
+++ b/Excel-Oracle.ipynb
@@ -253,6 +253,25 @@
         {
             "cell_type": "markdown",
             "source": [
+                "# Optional Drop Table before Loading Data"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Build statement\n",
+                "oracle_drop = \"DROP TABLE %s\" % (str(oracle_table))\n",
+                "# Drop table\n",
+                "db_inst.execute(oracle_drop)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "# Append Excel to Oracle"
             ],
             "metadata": {}
