Excel to CSV Notebook cleanup

--- a/Excel-CSV.ipynb
+++ b/Excel-CSV.ipynb
@@ -4,10 +4,10 @@
             "cell_type": "markdown",
             "source": [
                 "# Setup in VS Code\n",
-                "### First set your Python interpreter in (Cmd Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next line\n",
-                "### Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
-                "### Next start a new Jupyter notebook (Cmd Shift P): \"Jupyter: Create New Blank Notebook\"\n",
-                "### Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\""
+                "- ### First set your Python interpreter in (Cmd Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next line\n",
+                "- ### Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
+                "- ### Next start a new Jupyter notebook (Cmd Shift P): \"Jupyter: Create New Blank Notebook\"\n",
+                "- ### Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\""
             ],
             "metadata": {}
         },
