Oracle to Oracle Notebook added

--- a/Oracle-Oracle.ipynb
+++ b/Oracle-Oracle.ipynb
@@ -7,7 +7,7 @@
                 "- ### First set your Python interpreter (Cmd/Ctl Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next \"pip3\" line\n",
                 "- ### Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
                 "- ### Next start a new Jupyter notebook (Cmd/Ctl Shift P): \"Jupyter: Create New Blank Notebook\"\n",
-                "- ### Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
+                "- ### Install \"pip3 install pandas\"\n",
                 "- ### Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
                 "- ### Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
             ],
@@ -17,7 +17,7 @@
             "cell_type": "code",
             "execution_count": 2,
             "source": [
-                "# Pandas for CSV/Excel manipulation\n",
+                "# Pandas for data manipulation\n",
                 "import pandas as pd\n",
                 "# Library to talk with Oracle, requires Python cx_Oracle module and the Oracle Instant Client to be installed on host\n",
                 "from sqlalchemy import create_engine"
@@ -56,13 +56,15 @@
             "execution_count": null,
             "source": [
                 "# Read existing Oracle table\n",
-                "oracle_table = \"testtable\"\n",
+                "oracle_table_source = \"testtable\"\n",
+                "# Oracle target table\n",
+                "oracle_table_target = \"testtable_target\"\n",
                 "# Build query\n",
-                "oracle_query = \"SELECT * FROM %s\" % (str(oracle_table))\n",
+                "oracle_query = \"SELECT * FROM %s\" % (str(oracle_table_source))\n",
                 "# Run query\n",
-                "df_oracle = pd.read_sql_query(oracle_query, con=db_inst)\n",
+                "df_oracle_source = pd.read_sql_query(oracle_query, con=db_inst)\n",
                 "# View your new DataFrame\n",
-                "df_oracle"
+                "df_oracle_source"
             ],
             "outputs": [],
             "metadata": {}
@@ -79,9 +81,9 @@
             "execution_count": null,
             "source": [
                 "# List DataFrame columns\n",
-                "df_oracle.columns\n",
+                "df_oracle_source.columns\n",
                 "# List field types\n",
-                "df_oracle.convert_dtypes().dtypes"
+                "df_oracle_source.convert_dtypes().dtypes"
             ],
             "outputs": [],
             "metadata": {}
@@ -89,7 +91,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Write Oracle to Excel"
+                "# Optional Drop Table before Loading Data"
             ],
             "metadata": {}
         },
@@ -97,8 +99,10 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
-                "# Send Oracle DataFrame to Excel file\n",
-                "df_oracle.to_excel('testtable_oracle_export.xlsx', index=False)"
+                "# Build statement\n",
+                "oracle_drop = \"DROP TABLE %s\" % (str(oracle_table_target))\n",
+                "# Drop table\n",
+                "db_inst.execute(oracle_drop)"
             ],
             "outputs": [],
             "metadata": {}
@@ -106,7 +110,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Write Oracle to CSV"
+                "# Write Oracle to Oracle"
             ],
             "metadata": {}
         },
@@ -114,8 +118,8 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
-                "# Send Oracle DataFrame to CSV file\n",
-                "df_oracle.to_csv('testtable_oracle_export.csv', index=False)"
+                "# Append Oracle DataFrame from source table to Oracle target table\n",
+                "df_oracle_source.to_sql(oracle_table_target, db_inst, if_exists='append', index=False)"
             ],
             "outputs": [],
             "metadata": {}
@@ -123,7 +127,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Write Oracle to Text"
+                "# Read Oracle Target Table"
             ],
             "metadata": {}
         },
@@ -131,11 +135,12 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
-                "# Send Oracle DataFrame to string\n",
-                "text_oracle = df_oracle.to_string(header=False, index=False)\n",
-                "# Send Oracle string to text file\n",
-                "with open('testtable_oracle_export.txt', 'w') as text_contents:\n",
-                "    text_contents.write(text_oracle)"
+                "# Build query\n",
+                "oracle_query = \"SELECT * FROM %s\" % (str(oracle_table_target))\n",
+                "# Run query\n",
+                "df_oracle_target = pd.read_sql_query(oracle_query, con=db_inst)\n",
+                "# View your new target DataFrame\n",
+                "df_oracle_target"
             ],
             "outputs": [],
             "metadata": {}
@@ -143,27 +148,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Write Oracle transform to Excel"
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "source": [
-                "# Filter the Oracle data\n",
-                "date_query = (df_oracle['test_datetime'] >= \"2021-08-18\") & (df_oracle['test_datetime'] < \"2021-08-19\")\n",
-                "df_filtered_oracle = df_oracle.query('@date_query')\n",
-                "# Send part part of the Oracle filtered DataFrame to Excel file\n",
-                "df_filtered_oracle.to_excel('testtable_transformed_oracle_export.xlsx', index=False, columns=['test_datetime', 'test_number'])"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "# Write Oracle transform to CSV"
+                "# Write Oracle transform to Oracle"
             ],
             "metadata": {}
         },
@@ -172,10 +157,10 @@
             "execution_count": null,
             "source": [
                 "# Filter the Oracle data\n",
-                "date_query = (df_oracle['test_datetime'] >= \"2021-08-18\") & (df_oracle['test_datetime'] < \"2021-08-19\")\n",
-                "df_filtered_oracle = df_oracle.query('@date_query')\n",
-                "# Send part part of the Oracle filtered DataFrame to CSV file\n",
-                "df_filtered_oracle.to_csv('testtable_transformed_oracle_export.csv', index=False, columns=['test_datetime', 'test_number'])"
+                "date_query = (df_oracle_source['test_datetime'] >= \"2021-08-18\") & (df_oracle_source['test_datetime'] < \"2021-08-19\")\n",
+                "df_filtered_oracle = df_oracle_source.query('@date_query')\n",
+                "# Send part part of the Oracle filtered DataFrame from source table to Oracle target table\n",
+                "df_filtered_oracle.to_sql(oracle_table_target, db_inst, if_exists='append', index=False)"
             ],
             "outputs": [],
             "metadata": {}
